corrected toggle alignment

--- a/styles.css
+++ b/styles.css
@@ -247,9 +247,8 @@ a:hover {
 
   .toggle-theme {
     position: absolute;
-    right: 1rem;
-    top: 1.2rem;
-    font-size: 1.3rem;
+    right: 2.1rem;
+    font-size: 1.5rem;
   }
 
   .title {
